fix dialogs swagger
